force-app/main/default/objects/Amount_Wording_Setting__mdt/Amount_Wording_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Amount Wording Setting</label>
    <pluralLabel>Amount Wording Settings</pluralLabel>
</CustomObject>