force-app/main/default/objects/Amount_Wording_Setting__mdt/fields/API_Amount_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Amount_Field_Name__c</fullName>
    <label>API Amount Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>