force-app/main/default/objects/Amount_Wording_Setting__mdt/fields/API_En_Wording_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>API_En_Wording_Field_Name__c</fullName>
    <label>API English Wording Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>