force-app/main/default/objects/Amount_Wording_Setting__mdt/listViews/AllwithDetail.listView-meta.xml
<ListView>
    <fullName>AllwithDetail</fullName>
    <columns>API_Object_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>API_Amount_Field_Name__c</columns>
    <columns>Currency_Type__c</columns>
    <columns>API_Wording_Field_Name__c</columns>
    <columns>API_En_Wording_Field_Name__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All with detail</label>
    <language>en_US</language>
</ListView>